--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "@k-platform/client-core",
-  "version": "0.0.18",
+  "name": "@k-platform/client",
+  "version": "0.0.1",
   "description": "todo description",
   "author": "Alexander Kiriliuk",
   "scripts": {
     "ng": "ng",
-    "build": "ng build k-platform-client-core --configuration production",
+    "build": "ng build k-platform-client --configuration production",
     "publish": "cd dist && npm publish --registry=https://npm.specs-tech.ru",
     "start": "ng serve",
     "lint": "eslint --fix --ext .js,.ts,.html .",
