--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,12 @@
     "lib": [
       "ES2022",
       "dom"
-    ]
+    ],
+    "paths": {
+      "@k-platform/client": [
+        "lib"
+      ]
+    }
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
