--- a/package.json
+++ b/package.json
@@ -1,12 +1,10 @@
 {
-  "name": "@k-platform/client",
-  "version": "0.0.9",
   "description": "todo description",
   "author": "Alexander Kiriliuk",
   "scripts": {
     "ng": "ng",
     "build:lib": "ng build k-platform-client --configuration production",
-    "publish": "cd dist/core && npm publish --registry=https://npm.specs-tech.ru",
+    "publish": "cd dist/lib && npm publish --registry=https://npm.specs-tech.ru",
     "start:example:admin": "ng serve k-platform-admin",
     "build:example:admin": "ng build k-platform-admin",
     "lint": "eslint --fix --ext .js,.ts,.html .",
