Update platform to v18

--- a/package.json
+++ b/package.json
@@ -11,36 +11,36 @@
     "analyze:example:admin": "ng build k-platform-admin --configuration development --stats-json && webpack-bundle-analyzer dist/examples/admin/stats.json"
   },
   "dependencies": {
-    "@angular/animations": "17.3.8",
-    "@angular/common": "17.3.8",
-    "@angular/compiler": "17.3.8",
-    "@angular/core": "17.3.8",
-    "@angular/forms": "17.3.8",
-    "@angular/platform-browser": "17.3.8",
-    "@angular/platform-browser-dynamic": "17.3.8",
-    "@angular/router": "17.3.8",
+    "@angular/animations": "18.0.3",
+    "@angular/common": "18.0.3",
+    "@angular/compiler": "18.0.3",
+    "@angular/core": "18.0.3",
+    "@angular/forms": "18.0.3",
+    "@angular/platform-browser": "18.0.3",
+    "@angular/platform-browser-dynamic": "18.0.3",
+    "@angular/router": "18.0.3",
     "@ngneat/transloco": "6.0.4",
-    "ng-recaptcha": "13.2.1",
-    "ngx-device-detector": "7.0.0",
+    "ng-recaptcha-2": "14.0.0",
+    "ngx-device-detector": "8.0.0",
     "primeicons": "7.0.0",
     "primeng": "17.18.1",
     "rxjs": "7.8.1",
     "zone.js": "0.14.7",
-    "tslib": "2.6.2"
+    "tslib": "2.6.3"
   },
   "devDependencies": {
-    "@angular/cli": "17.3.8",
-    "@angular/compiler-cli": "17.3.8",
-    "@angular-devkit/build-angular": "17.3.8",
-    "@angular-eslint/eslint-plugin": "17.3.0",
-    "@angular-eslint/eslint-plugin-template": "17.3.0",
-    "@angular-eslint/template-parser": "17.3.0",
+    "@angular-devkit/build-angular": "18.0.3",
+    "@angular/compiler-cli": "18.0.3",
+    "@angular/cli": "18.0.3",
+    "@angular-eslint/eslint-plugin": "18.0.1",
+    "@angular-eslint/eslint-plugin-template": "18.0.1",
+    "@angular-eslint/template-parser": "18.0.1",
     "@types/jasmine": "5.1.4",
-    "@typescript-eslint/eslint-plugin": "7.4.0",
-    "@typescript-eslint/parser": "7.4.0",
+    "@typescript-eslint/eslint-plugin": "7.13.0",
+    "@typescript-eslint/parser": "7.13.0",
     "autoprefixer": "10.4.19",
     "eslint": "8.57.0",
-    "eslint-plugin-html": "8.0.0",
+    "eslint-plugin-html": "8.1.1",
     "eslint-plugin-import-newlines": "1.4.0",
     "jasmine-core": "5.1.2",
     "karma": "6.4.3",
@@ -48,8 +48,8 @@
     "karma-coverage": "2.2.1",
     "karma-jasmine": "5.1.0",
     "karma-jasmine-html-reporter": "2.1.0",
-    "ng-packagr": "17.3.0",
-    "typescript": "5.4.3",
+    "ng-packagr": "18.0.0",
+    "typescript": "5.4.5",
     "webpack-bundle-analyzer": "4.10.2"
   }
 }
