--- a/lib/package.json
+++ b/lib/package.json
@@ -2,23 +2,20 @@
   "name": "@k-platform/client",
   "version": "0.0.1",
   "peerDependencies": {
-    "@angular/animations": "17.*",
-    "@angular/common": "17.*",
-    "@angular/compiler": "17.*",
-    "@angular/core": "17.*",
-    "@angular/forms": "17.*",
-    "@angular/platform-browser": "17.*",
-    "@angular/platform-browser-dynamic": "17.*",
-    "@angular/router": "17.*",
+    "@angular/animations": "18.*",
+    "@angular/common": "18.*",
+    "@angular/compiler": "18.*",
+    "@angular/core": "18.*",
+    "@angular/forms": "18.*",
+    "@angular/platform-browser": "18.*",
+    "@angular/platform-browser-dynamic": "18.*",
+    "@angular/router": "18.*",
     "@ngneat/transloco": "6.*",
-    "ng-recaptcha": "13.*",
-    "ngx-device-detector": "7.*",
+    "ng-recaptcha-2": "14.*",
+    "ngx-device-detector": "8.*",
     "primeicons": "7.*",
     "primeng": "17.*",
     "rxjs": "7.*",
     "zone.js": "0.14.*"
-  },
-  "dependencies": {
-    "tslib": "2.6.2"
   }
 }
