--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,8 @@
   "compilerOptions": {
     "baseUrl": "./",
     "outDir": "./dist/out-tsc",
+    "declaration": true,
+    "removeComments": false,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "strictNullChecks": false,
@@ -12,7 +14,6 @@
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "sourceMap": true,
-    "declaration": false,
     "downlevelIteration": true,
     "experimentalDecorators": true,
     "moduleResolution": "node",
