--- a/tsconfig.doc.json
+++ b/tsconfig.doc.json
@@ -1,5 +1,5 @@
 {
   "extends": "./tsconfig.json",
   "include": ["lib/**/*.ts"],
-  "exclude": ["lib/test.ts", "lib/**/*.mock.ts", "lib/**/mock/*.*", "lib/**/*.spec.ts"]
+  "exclude": ["lib/test.ts", "lib/**/*.mock.ts", "lib/**/mock/*.*", "lib/**/*.spec.ts", "lib/**/index.ts"]
 }
