--- a/lib/package.json
+++ b/lib/package.json
@@ -6,7 +6,10 @@
     "type": "git",
     "url": "https://github.com/alexander-kiriliuk/k-platform-client"
   },
-  "version": "0.9.0",
+  "version": "0.9.1",
+  "publishConfig": {
+    "access": "public"
+  },
   "description": "Client application, which is an administrative panel for managing a platform-based system @k-platform",
   "keywords": [
     "admin panel",
